refactor(rdm-ui): 优化 ListTypeController 中的代码结构和性能
- 移除了未使用的导入语句，简化了代码结构
- 优化了列表操作相关的代码，提高了代码可读性和性能
- 修复了一些潜在的 bug，例如在列表为空时关闭 tab 的逻辑
- 优化了数据绑定和异步操作的实现